<resources>
    <string name="app_name">Ordering Food</string>
    <string name="food_ordering_app">Food Ordering App</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="welcome_onboard">Welcome Onboard!</string>
    <string name="register_to_enter_the_app">Register to enter the app</string>
    <string name="confrim_password">Confrim password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in2">Sign in</string>
    <string name="email">username atau email</string>
    <string name="password">password</string>
    <string name="enter_your_username">enter_your_username</string>
    <string name="pesan_sekarang">Pesan Sekarang</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>