<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Registration">

    <ImageView
        android:id="@+id/iv_shape"
        android:layout_width="290dp"
        android:layout_height="214dp"
        android:layout_marginStart="-40dp"
        android:layout_marginTop="-70dp"
        android:src="@drawable/Shape"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_onboard"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_to_enter_the_app"
        android:textColor="#4D000000"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="60dp"/>

    <EditText
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_full_name"
        android:layout_gravity="center"/>

    <EditText
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email"
        android:layout_gravity="center"/>

    <EditText
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_password"
        android:layout_gravity="center"/>

    <EditText
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:hint="@string/confrim_password"
        android:layout_gravity="center"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_regis"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:background="#FEB72B"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textSize="15sp"
            android:textColor="#B3000000"/>

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_in2"
            android:textColor="@color/Kuning"
            android:textSize="15sp"
            android:layout_toEndOf="@id/tv1"
            android:layout_marginStart="4dp"/>

    </RelativeLayout>


</LinearLayout>