<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">

    <ImageView
        android:id="@+id/iv_shape"
        android:layout_width="290dp"
        android:layout_height="214dp"
        android:src="@drawable/bentuk"
        android:layout_marginStart="-40dp"
        android:layout_marginTop="-70dp" />

    <TextView
        android:layout_marginTop="-30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_onboard"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <ImageView
        android:layout_width="211dp"
        android:layout_height="176dp"
        android:layout_gravity="center"
        android:src="@drawable/login"
        android:layout_marginBottom="24dp"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="283dp"
        android:layout_height="42dp"
        android:hint="@string/email"
        android:layout_gravity="center"
        android:background="@drawable/et_style"
        android:layout_marginBottom="16dp"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_email_"
        android:drawablePadding="10dp"/>

    <EditText
        android:id="@+id/et_pass"
        android:layout_width="283dp"
        android:layout_height="42dp"
        android:hint="@string/password"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:background="@drawable/et_style"
        android:drawableStart="@drawable/ic_lock_24"
        android:drawablePadding="10dp"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_login"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:text="Login"
        android:textColor="@color/white"
        android:background="@drawable/buttonstyle"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create Akun"
            android:textColor="#B3000000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_regis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Registrasi"
            android:textColor="@color/Kuning"
            android:textSize="15sp"
            android:layout_toEndOf="@id/tv1"
            android:layout_marginStart="4dp"/>

    </RelativeLayout>

</LinearLayout>